--- a/css/app.css
+++ b/css/app.css
@@ -123,5 +123,12 @@ button:hover{
     .inner-modal{
         display:flex;
         flex-direction:column;
+        padding: 30px 0;
+    }
+    .inner-modal img{
+        min-width:200px;
+        max-width:300px;
+        border-radius:16px;
     }
 }
+
